--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "potelo/laravel-block-bots": "^1.1"
+        "potelo/laravel-block-bots": "^1.1",
+        "sendgrid/sendgrid": "^7.11",
+        "twilio/sdk": "^6.32"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
