--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "@php artisan migrate --force"
         ]
     },
     "extra": {
