--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Burner Note"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -50,3 +50,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Resend (for email delivery)
+RESEND_API_KEY=
