zero knowledge and dark mode

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # Resend (for email delivery)
 RESEND_API_KEY=
+
+# Legacy burn count from previous database (added to live count on homepage)
+LEGACY_BURN_COUNT=0
