--- a/.env.example
+++ b/.env.example
@@ -56,5 +56,9 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 # Resend (for email delivery)
 RESEND_API_KEY=
 
+# Cloudflare Turnstile (registration anti-bot)
+TURNSTILE_SITE_KEY=
+TURNSTILE_SECRET_KEY=
+
 # Legacy burn count from previous database (added to live count on homepage)
 LEGACY_BURN_COUNT=0
